deployments/apps/seat/seat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: seat.${SECRET_DOMAIN_2}
    external-dns.alpha.kubernetes.io/target: lb.${SECRET_DOMAIN_2}
    external-dns.alpha.kubernetes.io/ttl: "120"
    external-dns/is-public: "true"
    kubernetes.io/ingress.class: "nginx"
  name: seat
  namespace: seat
spec:
  rules:
  - host: seat.${SECRET_DOMAIN_2}
    http:
      paths:
      - backend:
          service:
            name: seat
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - seat.${SECRET_DOMAIN_2}
